--- a/06-02-19 Full Run_KC.ipynb
+++ b/06-02-19 Full Run_KC.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -54,92 +54,39 @@
      "text": [
       "Allegation sets\n",
       "\n",
-      "Sets trained with 1 year(s) of data\n",
+      "Training set 0 is trained from 2010-01-01 to 2010-12-31 to predict the outcome from 2011-01-01 to 2012-12-31 and tested on outcomes in 2013-01-01 to 2014-12-31\n",
       "\n",
-      "Training set 0 is trained from 2010-01-01 to 2010-12-31 to predict the outcome from 2011-01-01 to 2012-01-01 and tested on outcomes in 2012-01-02 to 2012-12-30\n",
-      "Training set 1 is trained from 2010-01-01 to 2011-12-31 to predict the outcome from 2012-01-01 to 2012-12-31 and tested on outcomes in 2013-01-01 to 2013-12-30\n",
-      "Training set 2 is trained from 2010-01-01 to 2012-12-30 to predict the outcome from 2012-12-31 to 2013-12-31 and tested on outcomes in 2014-01-01 to 2014-12-31\n",
-      "Training set 3 is trained from 2010-01-01 to 2013-12-30 to predict the outcome from 2013-12-31 to 2015-01-01 and tested on outcomes in 2015-01-02 to 2015-12-31\n",
-      "Training set 4 is trained from 2010-01-01 to 2014-12-31 to predict the outcome from 2015-01-01 to 2016-01-01 and tested on outcomes in 2016-01-02 to 2016-12-30\n",
-      "Training set 5 is trained from 2010-01-01 to 2015-12-31 to predict the outcome from 2016-01-01 to 2016-12-31 and tested on outcomes in 2017-01-01 to 2017-12-30\n",
+      "Training set 1 is trained from 2010-01-01 to 2011-12-31 to predict the outcome from 2012-01-01 to 2013-12-31 and tested on outcomes in 2014-01-01 to 2015-12-31\n",
       "\n",
-      "Sets trained with 2 year(s) of data\n",
+      "Training set 2 is trained from 2010-01-01 to 2012-12-30 to predict the outcome from 2012-12-31 to 2015-01-01 and tested on outcomes in 2015-01-02 to 2016-12-30\n",
       "\n",
-      "Training set 6 is trained from 2010-01-01 to 2011-12-31 to predict the outcome from 2012-01-01 to 2012-12-31 and tested on outcomes in 2013-01-01 to 2013-12-30\n",
-      "Training set 7 is trained from 2010-01-01 to 2012-12-30 to predict the outcome from 2012-12-31 to 2013-12-31 and tested on outcomes in 2014-01-01 to 2014-12-31\n",
-      "Training set 8 is trained from 2010-01-01 to 2013-12-30 to predict the outcome from 2013-12-31 to 2015-01-01 and tested on outcomes in 2015-01-02 to 2015-12-31\n",
-      "Training set 9 is trained from 2010-01-01 to 2014-12-31 to predict the outcome from 2015-01-01 to 2016-01-01 and tested on outcomes in 2016-01-02 to 2016-12-30\n",
-      "Training set 10 is trained from 2010-01-01 to 2015-12-31 to predict the outcome from 2016-01-01 to 2016-12-31 and tested on outcomes in 2017-01-01 to 2017-12-30\n",
-      "\n",
-      "Sets trained with 3 year(s) of data\n",
-      "\n",
-      "Training set 11 is trained from 2010-01-01 to 2012-12-30 to predict the outcome from 2012-12-31 to 2013-12-31 and tested on outcomes in 2014-01-01 to 2014-12-31\n",
-      "Training set 12 is trained from 2010-01-01 to 2013-12-30 to predict the outcome from 2013-12-31 to 2015-01-01 and tested on outcomes in 2015-01-02 to 2015-12-31\n",
-      "Training set 13 is trained from 2010-01-01 to 2014-12-31 to predict the outcome from 2015-01-01 to 2016-01-01 and tested on outcomes in 2016-01-02 to 2016-12-30\n",
-      "Training set 14 is trained from 2010-01-01 to 2015-12-31 to predict the outcome from 2016-01-01 to 2016-12-31 and tested on outcomes in 2017-01-01 to 2017-12-30\n",
-      "\n",
-      "Sets trained with 4 year(s) of data\n",
-      "\n",
-      "Training set 15 is trained from 2010-01-01 to 2013-12-30 to predict the outcome from 2013-12-31 to 2015-01-01 and tested on outcomes in 2015-01-02 to 2015-12-31\n",
-      "Training set 16 is trained from 2010-01-01 to 2014-12-31 to predict the outcome from 2015-01-01 to 2016-01-01 and tested on outcomes in 2016-01-02 to 2016-12-30\n",
-      "Training set 17 is trained from 2010-01-01 to 2015-12-31 to predict the outcome from 2016-01-01 to 2016-12-31 and tested on outcomes in 2017-01-01 to 2017-12-30\n",
-      "\n",
-      "Sets trained with 5 year(s) of data\n",
-      "\n",
-      "Training set 18 is trained from 2010-01-01 to 2014-12-31 to predict the outcome from 2015-01-01 to 2016-01-01 and tested on outcomes in 2016-01-02 to 2016-12-30\n",
-      "Training set 19 is trained from 2010-01-01 to 2015-12-31 to predict the outcome from 2016-01-01 to 2016-12-31 and tested on outcomes in 2017-01-01 to 2017-12-30\n",
-      "\n",
-      "Sets trained with 6 year(s) of data\n",
-      "\n",
-      "Training set 20 is trained from 2010-01-01 to 2015-12-31 to predict the outcome from 2016-01-01 to 2016-12-31 and tested on outcomes in 2017-01-01 to 2017-12-30\n",
+      "Training set 3 is trained from 2010-01-01 to 2013-12-30 to predict the outcome from 2013-12-31 to 2016-01-01 and tested on outcomes in 2016-01-02 to 2017-12-30\n",
       "\n",
       "\n",
       "\n",
       "TRR sets\n",
       "\n",
-      "Sets trained with 1 year(s) of data\n",
+      "Training set 0 is trained from 2010-01-01 to 2010-12-31 to predict the outcome from 2011-01-01 to 2012-12-31 and tested on outcomes in 2013-01-01 to 2014-12-31\n",
       "\n",
-      "Training set 0 is trained from 2010-01-01 to 2010-12-31 to predict the outcome from 2011-01-01 to 2012-01-01 and tested on outcomes in 2012-01-02 to 2012-12-30\n",
-      "Training set 1 is trained from 2010-01-01 to 2011-12-31 to predict the outcome from 2012-01-01 to 2012-12-31 and tested on outcomes in 2013-01-01 to 2013-12-30\n",
-      "Training set 2 is trained from 2010-01-01 to 2012-12-30 to predict the outcome from 2012-12-31 to 2013-12-31 and tested on outcomes in 2014-01-01 to 2014-12-31\n",
-      "Training set 3 is trained from 2010-01-01 to 2013-12-30 to predict the outcome from 2013-12-31 to 2015-01-01 and tested on outcomes in 2015-01-02 to 2015-12-31\n",
-      "\n",
-      "Sets trained with 2 year(s) of data\n",
-      "\n",
-      "Training set 4 is trained from 2010-01-01 to 2011-12-31 to predict the outcome from 2012-01-01 to 2012-12-31 and tested on outcomes in 2013-01-01 to 2013-12-30\n",
-      "Training set 5 is trained from 2010-01-01 to 2012-12-30 to predict the outcome from 2012-12-31 to 2013-12-31 and tested on outcomes in 2014-01-01 to 2014-12-31\n",
-      "Training set 6 is trained from 2010-01-01 to 2013-12-30 to predict the outcome from 2013-12-31 to 2015-01-01 and tested on outcomes in 2015-01-02 to 2015-12-31\n",
-      "\n",
-      "Sets trained with 3 year(s) of data\n",
-      "\n",
-      "Training set 7 is trained from 2010-01-01 to 2012-12-30 to predict the outcome from 2012-12-31 to 2013-12-31 and tested on outcomes in 2014-01-01 to 2014-12-31\n",
-      "Training set 8 is trained from 2010-01-01 to 2013-12-30 to predict the outcome from 2013-12-31 to 2015-01-01 and tested on outcomes in 2015-01-02 to 2015-12-31\n",
-      "\n",
-      "Sets trained with 4 year(s) of data\n",
-      "\n",
-      "Training set 9 is trained from 2010-01-01 to 2013-12-30 to predict the outcome from 2013-12-31 to 2015-01-01 and tested on outcomes in 2015-01-02 to 2015-12-31\n",
+      "Training set 1 is trained from 2010-01-01 to 2011-12-31 to predict the outcome from 2012-01-01 to 2013-12-31 and tested on outcomes in 2014-01-01 to 2015-12-31\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "len() takes exactly one argument (2 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-b6a4b1105523>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mset_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mraw_dfs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_train_tests\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtimedelta64\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Y\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Documents\\GitHub\\ML Lab\\ml_final_project\\full_pipeline.py\u001b[0m in \u001b[0;36mcreate_train_tests\u001b[1;34m(self, outcome_time)\u001b[0m\n\u001b[0;32m     40\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mcreate_train_tests\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutcome_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_test\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutcome_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         \u001b[0mset_count\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mallegation_sets\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrr_sets\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m         \u001b[0mset_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mset_count\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: len() takes exactly one argument (2 given)"
      ]
     }
    ],
    "source": [
-    "raw_dfs.train_test(np.timedelta64(1, \"Y\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Below, we select sets 15 and 9 to test our pipeline."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_test = raw_dfs.select_sets(15, 9)"
+    "set_list = raw_dfs.create_train_tests(np.timedelta64(2, \"Y\"))"
    ]
   },
   {
